Fixed alignment issues

--- a/client/src/styles/Hero.css
+++ b/client/src/styles/Hero.css
@@ -64,7 +64,7 @@
 }
 
 .hero-welcome {
-  padding-bottom: 5px;
+  padding-bottom: 25px;
   margin: 0px;
 }
 
